feat: add pomatez blocklet

--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -17,6 +17,12 @@ color=#81b71a
 interval=5
 
 
+[pomatez]
+command=/home/$USER/.config/scripts/pomatez
+interval=1
+label=󰔛
+
+
 [wifi]
 command=/home/$USER/.config/scripts/wifi -f 'WIFI: {ssid} '
 instance=wlo1
