--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack Nerd Font  8
+font pango:Hack Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -380,4 +380,6 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 2%-
 bindsym XF86MonBrightnessUp exec brightnessctl set +2%
 
 
+
+bindsym $mod+Shift+w exec --no-startup-id sh -c "pgrep -x pomatez >/dev/null && pkill -x pomatez"
 
